packages/typ/tests/fixtures/diagnostics/0530_modules_nested_value_mismatch_10.ml
module W : sig
  module Inner : sig
    val x : bool
  end
end = struct
  module Inner = struct
    let x = 9
  end
end
